--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
                     <li><a href="#work">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a target="_blank" href="http://erkin.xyz/blog.html">Blog</a></li>
+                    <li><a href="#scanning">Scanning</a></li>
                 </ul>
                 <ul id="nav-mobile" class="side-nav">
                     <li><a href="#intro">About</a></li>
                     <li><a href="#work">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a target="_blank" href="http://erkin.xyz/blog.html">Blog</a></li>
+                    <li><a href="#scanning">Scanning</a></li>
                 </ul>
             <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
             </div>
@@ -163,6 +165,25 @@
     </div>
 </div>
 
+<!--Scanning-->
+<div class="section scrollspy" id="scanning">
+    <div class="container">
+        <h2 class="header text_b">Scanning </h2>
+        <div class="row">
+            <div class="col s12 m12 l12">
+                <div>
+                    <p class="light center" style="text-align: left;">
+                        If you have identified nmap scans originating from this IP address, the scanning performed is strictly for research and/or bug bounty purposes. 
+                        All scans originating from this IP address are SYN scans and do not complete a full TCP handshake. Additionally, scanning speed is set to be as polite as possible
+                        while only targeting the following ports: 80, 443, 8080, 8000, 8001, 8443. If we are scanning you and you would like us to stop, please reach out and we will gladly add you to our do not scan list.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <!--Footer-->
 <footer id="contact" class="page-footer default_color scrollspy">
     <div class="container">
@@ -171,33 +192,24 @@
             </div>
             <div class="col l3 s12">
                 <h5 class="white-text">Contact</h5>
-                <ul>
-                    <li>
-                        <a class="white-text" target="_blank" href="https://www.linkedin.com/in/erkin-djindjiev-65817251">
-                            <i class="small fa fa-linkedin"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="white-text" target="_blank" href="https://github.com/sea-erkin/">
-                            <i class="small fa fa-github"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="white-text" target="_blank" href="https://twitter.com/SeaErkin/">
-                            <i class="small fa fa-twitter"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="white-text" target="_blank" href="http://erkin.xyz/blog.html">
-                            <i class="small fa fa-comment"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="white-text" href="mailto:seaerkin@gmail.com?Subject=[Erkin.xyz]">
+            </div>
+            <div class="col l12 m12 s12">
+                    <a class="white-text" target="_blank" href="https://www.linkedin.com/in/erkin-djindjiev-65817251">
+                        <i class="small fa fa-linkedin"></i>
+                    </a>
+                    <a class="white-text" target="_blank" href="https://github.com/sea-erkin/">
+                        <i class="small fa fa-github"></i>
+                    </a>
+                    <a class="white-text" target="_blank" href="https://twitter.com/SeaErkin/">
+                        <i class="small fa fa-twitter"></i>
+                    </a>
+                    <a class="white-text" target="_blank" href="http://erkin.xyz/blog.html">
+                        <i class="small fa fa-comment"></i>
+                    </a>
+                    <a class="white-text" href="mailto:seaerkin@gmail.com?Subject=[Erkin.xyz]">
                             <i class="small fa fa-envelope"></i>
-                        </a>
-                    </li>
-                </ul>
+                    </a>
+            </div>
             </div>
         </div>
     </div>
